--- a/ShopSphere_Frontend/index.html
+++ b/ShopSphere_Frontend/index.html
@@ -3,9 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/logo" href="/s_logo.png" />
+  <link rel="icon" type="image/svg+xml" href="/s_logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>shopsphere</title>
+  <meta name="theme-color" content="#7c3aed" />
+  <meta name="description"
+    content="ShopSphere — Identify, Compare, and Shop premium products with an exclusive violet-themed experience." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <title>ShopSphere — Premium Shopping Experience</title>
 </head>
 
 <body>
